--- a/res/layout/footer/index.html
+++ b/res/layout/footer/index.html
@@ -1,11 +1,7 @@
-<script>var exports = {};</script>
 <script type="text/javascript" src="language-js#"></script>
-<script type="text/javascript" src='https://requirejs.org/docs/release/2.3.6/minified/require.js'></script>
-<script type="text/javascript" src="../../../java/com/AppCompatActivity.js"></script>
-<script type="text/javascript" src="../../../java/com/Toast.js"></script>
-<script type="text/javascript" src="../../../java/com/ContextMenu.js"></script>
-<script type="text/javascript" src="../../../java/com/HttpRequest.js"></script>
-<script type="text/javascript" src="../../../java/com/MainActivity.js"></script>
+<script type="text/javascript" src="java/com/AppCompatActivity.js"></script>
+<script type="text/javascript" src="java/com/Toast.js"></script>
+<script type="text/javascript" src="java/com/MainActivity.js"></script>
 
 </body>
 </html>
