--- a/res/layout/header/index.html
+++ b/res/layout/header/index.html
@@ -12,9 +12,10 @@
     <meta http-equiv="content-Language" content="de" />
     <meta name="robots" content="index,follow" />
 
-    <link rel="stylesheet" href="../../styles/style.css?version={$version_code}{$uniqid}">
+    <link rel="stylesheet" href="res/styles/style.css?version={$version_code}{$uniqid}">
 
-    <script type="text/javascript" src="../../../java/plugins/jquery/index.js"></script>
+    <script type="text/javascript" src="java/plugins/jquery/index.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.css">
+
 </head>
 <body>
