--- a/res/styles/button.scss
+++ b/res/styles/button.scss
@@ -17,7 +17,7 @@
   transition:background .2s,color .2s;
   text-align:center;
   text-decoration:none;
-  font:1.286em/1.1667 'Open Sans',sans-serif;
+  font:1.286em/1.1667 'Poppins',sans-serif;
   font:{
     weight: 600;
   }
