--- a/res/styles/style.css
+++ b/res/styles/style.css
@@ -46,7 +46,7 @@ h2 {
   transition: background .2s,color .2s;
   text-align: center;
   text-decoration: none;
-  font: 1.286em/1.1667 'Open Sans',sans-serif;
+  font: 1.286em/1.1667 'Poppins',sans-serif;
   font-weight: 600;
   -webkit-font-smoothing: antialiased;
   -webkit-user-select: none;
